tests/resources/valid/error/handle.mamba
def a <- f(10) handle
    err: MyErr1 => print "Something went wrong"
    err: MyErr2 => print "Something else went wrong"
